# oceanquery

./: .gitignore  CORE_FEATURES_IMPLEMENTATION.md  FEATURE_INVENTORY.md  Makefile  PROJECT_ANALYSIS_REPORT.md  README.md  start-oceanquery.sh  test_setup.py
backend/: .env.example  create_tables.py  import_argo_data.py  pyproject.toml  requirements.txt  test_enhanced_chat.py
backend/backend/: ENHANCED_CHAT_PIPELINE.md
backend/data/: argo_index_subset.csv  argo_subset_metadata.json  download_results_20250908_204524.json
backend/scripts/: demo_rag_system_mock.py  download_argo.py  filter_argo_index.py  generate_demo_measurements.py  ingest_argo.py  test_3_questions.py  test_production_rag.py  test_rag_chat_integration.py  test_rag_chatbot.py  test_rag_chatbot_concepts.py  test_rag_structure.py  test_rag_system.py  test_sentence_transformers_rag.py  verify_argo_ingest.py
backend/src/: main.py
backend/src/api/routes/: argo.py  argo_real.py  auth.py  chat.py  chat_real.py  export.py  ingestion.py  measurements.py
backend/src/api/v1/endpoints/: enhanced_chat.py
backend/src/core/: config.py  config_rag.py
backend/src/data/: __init__.py
backend/src/data/ingestion/: __init__.py  config.py  database_ops.py  mappers.py  parsers.py  service.py
backend/src/db/: init_db.py  models.py
backend/src/services/nlp/: __init__.py  conversation_manager.py  enhanced_chat_pipeline.py  models.py  query_parser.py  sql_generator.py
backend/src/services/rag/: __init__.py  alternative_embeddings.py  knowledge_manager.py  rag_orchestrator.py  sentence_transformers_embeddings.py  vector_store.py
backend/tests/: test_argo_ingestion.py
docs/: ARGO_INGESTION.md
frontend/: .env.example  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: argo_statistics.dart
frontend/lib/routes/: app_router.dart
frontend/lib/screens/auth/: auth_screen.dart
frontend/lib/screens/chat/: chat_screen.dart
frontend/lib/screens/dashboard/: advanced_dashboard_screen.dart  dashboard_screen.dart
frontend/lib/services/: argo_service.dart  data_update_service.dart
frontend/lib/services/api/: api_client.dart
frontend/lib/themes/: app_theme.dart
frontend/lib/widgets/charts/: circular_progress_chart.dart  heatmap_calendar.dart  horizontal_bar_chart.dart  mini_world_map.dart  multi_line_chart.dart  profile_plot.dart  progress_ring.dart  radar_chart_widget.dart  temperature_chart.dart  time_series_chart.dart
frontend/lib/widgets/common/: data_filter_panel.dart  data_status_widget.dart  main_layout.dart
frontend/lib/widgets/maps/: argo_map.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
infra/: docker-compose.yml
infra/data/postgres/: postmaster.pid
infra/data/postgres/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
infra/data/postgres/base/16384/: 1247  1247_fsm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13457_fsm  13457_vm  13462  13462_fsm  13462_vm  13467_fsm  (+148 more)
infra/data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
infra/data/postgres/pg_stat/: pgstat.stat
infra/init-scripts/: 01_create_extensions.sql
(+2 files in other folders)
